# cspe

./: .gitignore  cpu_benchmark_results.txt  gpu_benchmark_results.txt  hello.py  package.xml  pyproject.toml  ros_config.txt  setup.cfg  setup.py
cspe/: pc_vfe.py  utilities.py
cspe/identification/: context_id.py  low_level_info.py  prompts.py  semantic_info.py
cspe/scripts/: context_identifier.py  live_friction_recorder.py  parameter_estimator.py
launch/: cspe.launch.py
notebooks/: db_analysis.ipynb  imagedb.pth  plotting.ipynb
test/: test_copyright.py
test/identification/: test_llextract.py  test_semanticextract.py
